--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -4,7 +4,7 @@
 
         "target": "ES6",
         "module": "ESNext",
-        "outDir": "./",
+        "outDir": "./compilados",
         "strict": true,
         "moduleResolution": "Node"
 
