--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.6",
+    "@types/shelljs": "^0.8.15",
     "esm": "^3.2.25"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "node-fetch": "^3.3.2",
-    "shelljs": "^0.8.5" //Para executar comandos no sistema
+    "shelljs": "^0.8.5"
   }
 }
